[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/GUI/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu/menu_background.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu/start_button.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu/close_button.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu/quit.png" type="Texture" id=5]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 644 )
scale = Vector2( 0.985859, 1.22222 )
texture = ExtResource( 2 )

[node name="start" type="Button" parent="."]
margin_left = 880.0
margin_top = 792.0
margin_right = 1056.0
margin_bottom = 992.0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="start"]
light_mask = -2147483647
position = Vector2( 120, 168 )
scale = Vector2( 0.601768, 0.704109 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 208.0
margin_top = 216.0
margin_right = 376.0
margin_bottom = 376.0
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
self_modulate = Color( 0.757813, 0.757813, 0.757813, 1 )
position = Vector2( 184, 40 )
scale = Vector2( 0.545565, 0.552662 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Button"]
position = Vector2( 80, 88 )
scale = Vector2( 0.281313, 0.288542 )
texture = ExtResource( 4 )
[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
